CheckiN:Fix bugzilla bug 193431org.eclipse.birt.data has compile error in daily build 20070621-0630